--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <a href="#purpose">Purpose</a> &nbsp;
       <a href="#aboutWebPage">About the Web Page</a> &nbsp;
       <a href="#hypotheses">Null and Alternative Hypotheses</a>
+      <a href="#stat">Summary Statistics</a>
     </div>
 
     <!-- head -->
@@ -381,6 +382,45 @@
         </li>
       </ol>
     </div>
+    <br />
+    <div class="dotted-line"></div>
+    <!-- Summary Statistics -->
+    <div class="stat" id="stat">
+      <h3>Summary Statistics</h3>
+      <p>
+        In this A/B testing task, there has 34 data for version A and 30 data
+        for version B.
+      </p>
+      <p>
+        For time on page, the average value of version A is 12860.44, and the
+        average value of version B is 9376.7. It can be seen that there is still
+        a gap between the two data. This may also be reflected in the t-score,
+        which also shows that the two data are not similar. In addition, the
+        variance of version A (140609949) is also larger than the variance of
+        version B (96675164.7), which shows that the data points of version B
+        are more concentrated, which may indicate that these data is more valid
+        and reliable.
+      </p>
+      <p>
+        For time to first click, the mean value of version A (5542.94) is larger
+        than the mean value of version B (3740). This shows that the speed of
+        most users clicks the button for the first time when using the interface
+        of version B is faster than that of version A. In this matric, the
+        variance of version A (19411963.57) is still larger than the variance of
+        version B (1139445.727), indicating that the data dispersion of version
+        B is smaller and can better represent a trend.
+      </p>
+      <p>
+        From my perspective, the more discrete data of version A may be due to
+        reasons other than interface factors, such as different computer screens
+        showing different clarity, or the user being nervous so that they
+        touched other buttons accidentally. Generally speaking, to obtain more
+        accurate statistical data, the number of data can be expanded, and we
+        should try to ensure that users conduct testing under stable and relax
+        external conditions. Just like a normal booking process.
+      </p>
+    </div>
+
     <br />
     <hr />
     <br />
