--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
                 </tbody>
               </table>
               <p>
-                The chi-squared value shows that there is statistically
-                significant difference between two versions of interface. The
-                p-value shows that there is 24% chance that the two versions are
-                the same. The df value represents the number of categories in
-                the data set that can vary freely, that is 1.
+                The chi-squared value shows that there exist some differences
+                between two versions of interface. The p-value shows that there
+                is 24% chance that the two versions are the same. The df value
+                represents the number of categories in the data set that can
+                vary freely, that is 1.
               </p>
             </li>
             <li>
